--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <div id="app container"> 
         <div class="row">
 
-            <div class="col-1 item">
+            <div class="col-">1
                 <i class="far fa-arrow-alt-circle-left"></i>
             </div>
 
-            <div class="col-10 item">
+            <div class="col-10">
                 <img v-for="img in arrayImg" :src="arrayImg[0]"/>
             </div>
 
-            <div class="col-1 item">
+            <div class="col-1">
                 <i class="far fa-arrow-alt-circle-right"></i>
             </div>
 
